[package]
authors = ["Stanislav Panferov <stanislav@panferov.dev>"]
edition = "2021"
description = "Minimal test helper to work with markdown snapshots"
name = "snapdown"
license = "MIT"
version = "1.0.0"
keywords = ["snapshot", "testing", "markdown"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
criterion = "0.4.0"
datatest-stable = "0.1.3"
similar-asserts = "1.4.2"
structopt = "0.3.26"

[features]
default = []
